--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -482,7 +482,6 @@
         .product-page {
             display: flex;
             flex-direction: column;
-            align-items: center;
         }
         
         .product-list {
